pkg/localenv/microservice/manifests/frontend/peerauthentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: frontend
  namespace: microservices
  labels:
    app.kubernetes.io/name: frontend-peer-auth
    app.kubernetes.io/component: security
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: frontend
  mtls:
    mode: STRICT
