pkg/localenv/microservice/manifests/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: microservices
  labels:
    app.kubernetes.io/name: frontend
    app.kubernetes.io/component: web-tier
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app.kubernetes.io/name: frontend
