pkg/localenv/microservice/manifests/frontend/authorizationpolicy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: frontend
  namespace: microservices
  labels:
    app.kubernetes.io/name: frontend-authz
    app.kubernetes.io/component: security
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: frontend
  rules:
  - from:
    - source:
        principals:
        - "cluster.local/ns/istio-system/sa/istio-ingressgateway"
    to:
    - operation:
        methods: ["GET", "POST", "PUT", "DELETE"]
